added handlers and logic improvents
/api/score/list - removed auth, response now sorted by ranking desc

/api/score/submit - removed nickname from request body (taking userID and then nickname from auth token)

New endpoint  - GET /api/score/top - params: limit (optional, default: 3),  season (optional, default: current season)

New endpoint  - DELETE /api/score/delete - deletes all score only for admin role
