# cmd/server/docs/swagger.json
@@ -75,14 +75,37 @@
                 }
             }
         },
-        "/api/score/list": {
-            "post": {
+        "/api/score/delete": {
+            "delete": {
                 "security": [
                     {
                         "UserTokenAuth": []
                     }
                 ],
-                "description": "ListScores",
+                "description": "Deletes the entire leaderboard (for admin use).",
+                "tags": [
+                    "Score"
+                ],
+                "summary": "DeleteAllScores",
+                "responses": {
+                    "200": {
+                        "description": "DeleteAllScores success",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "internal server error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/score/list": {
+            "post": {
+                "description": "Get list of scores based on season",
                 "tags": [
                     "Score"
                 ],
@@ -130,7 +153,7 @@
                         "UserTokenAuth": []
                     }
                 ],
-                "description": "SubmitScore",
+                "description": "Create or updates if exists the player’s score",
                 "tags": [
                     "Score"
                 ],
@@ -163,6 +186,46 @@
                         "description": "unauthorized",
                         "schema": {
                             "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "internal server error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/score/top": {
+            "get": {
+                "description": "Retrieves the top players based on their ranking",
+                "tags": [
+                    "Score"
+                ],
+                "summary": "TopScores",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "limit",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "season",
+                        "name": "season",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "TopScores success",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/score.Score"
+                            }
                         }
                     },
                     "500": {
@@ -283,7 +346,6 @@
             "type": "object",
             "required": [
                 "losses",
-                "nickName",
                 "rating",
                 "region",
                 "wins"
@@ -293,12 +355,8 @@
                     "type": "integer",
                     "minimum": 0
                 },
-                "nickName": {
-                    "type": "string",
-                    "maxLength": 32,
-                    "minLength": 3
-                },
                 "rating": {
+                    "description": "NickName string `json:\"nickName\" validate:\"required,min=3,max=32,alphanum\"`",
                     "type": "integer",
                     "minimum": 1
                 },
